syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


service OrderServiceClient {
  rpc createProduct(createProductPayload) returns (createProductResponse) {}
  rpc getProduct(getProductPayload) returns (createProductResponse) {}
  rpc deleteProduct(getProductPayload) returns (deleteResponse) {}
  rpc createUserProduct(addUserProduct) returns (createUserProductResponse) {}
  rpc getUserProduct(getUserProductPayload) returns (createUserProductResponse) {}
  rpc removeUserProduct(getUserProductPayload) returns (deleteResponse) {}
  rpc getAllUserProducts(getAllUserProductsPayload) returns (stream allUserProductsResponse) {}
  rpc getAllProducts(google.protobuf.Empty) returns (stream allProductResponse) {}
  rpc buyAProduct(buyASellerProductPayload) returns (buyASellerProductResponse) {}

  // rpc getAllUserProducts(getAllUserProductsPayload) returns (stream createUserProductResponse) {}
}


message buyASellerProductPayload {
  string userProductId = 1;
  int32 quantity =2;
  string fromCurrency = 3;
  string toCurrency = 4;
  optional string buyingUserId = 5;

}

message buyASellerProductResponse {
  optional string message = 1;
  optional string error = 2;
}



message createUserProductResponse {
  int32 sellingPrice = 1;
  string productId = 2;
  string userId = 3;
  optional string description = 4;
  bool product_visibility = 5;
  google.protobuf.Timestamp  createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message allUserProductsResponse {
  repeated createUserProductResponse products = 1;
}

message allProductResponse {
  repeated createProductResponse products = 1;
}


message createProductPayload {
  string title = 1;
  float price = 2;
  string image = 3;
}

message deleteResponse {
  string message = 1;
}

message createProductResponse {
  string title = 1;
  float price = 2;
  string image = 3;
  string id = 4;
  google.protobuf.Timestamp  createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message addUserProduct {
  int32 sellingPrice = 1;
  string productId = 2;
  string userId = 3;
  optional string description = 4;
  bool product_visibility = 5;
}

message getProductPayload {
  optional string productId = 1;
  optional string title = 2;
}

message getUserProductPayload {
  string productId = 1;
  string userId = 2;
}

message addBoughtProductToUserPayload {
  string productId = 1;
  string userId = 2;
}

message getAllUserProductsPayload {
  string userId = 1;
}
